--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+:root {
+  --v-space: clamp(90px, 9vw, 120px);
+}
+
 body {
   margin: 0;
   background-color: lightgray;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
   margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 p {
@@ -22,11 +35,14 @@ a:hover {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .w-container {
   width: min(92%, 1166px);
   margin: auto;
+  position: relative;
 }
 
 .header {
@@ -92,4 +108,257 @@ img {
   font-size: 18px;
   text-align: center;
   text-shadow: 0 0 6px #00000052;
+}
+
+.imgtext {
+  padding: var(--v-space) 0;
+  background-color: #ffffff;
+}
+
+.imgtext + .imgtext {
+  padding-top: 0;
+}
+
+.heading-decoration {
+  font-size: clamp(30px, 3vw, 40px);
+  min-height: 0vw;
+  font-weight: 400;
+}
+
+.heading-decoration::after {
+  display: block;
+  content: "";
+  width: 160px;
+  height: 0px;
+  border-top: solid 1px #b72661;
+  margin-top: 0.6em;
+}
+
+.heading-decoration + p {
+  margin-top: 1em;
+  margin-bottom: 2em;
+  color: #707070;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+}
+
+.imgtext-container {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(45px, 6vw, 80px);
+}
+
+.posts {
+  padding: var(--v-space) 0;
+  background-color: #f3f1ed;
+}
+
+.posts-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px 25px;
+}
+
+.heading {
+  position: absolute;
+  top: calc((var(--v-space) + 0.6em) * -1);
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(40px, 5.2vw, 70px);
+  min-height: 0vw;
+  font-weight: 300;
+}
+
+.heading span {
+  display: block;
+  color: #666666;
+  font-size: 18px;
+}
+
+.footer {
+  padding: 70px 0;
+  background-color: #ffffff;
+  color: #707070;
+  font-size: 13px;
+}
+
+.footer-container {
+  display: grid;
+  gap: 50px;
+  justify-items: center;
+}
+
+.footer-sns {
+  display: flex;
+  gap: 24px;
+  font-size: 24px;
+}
+
+.footer-sns a {
+  display: grid;
+  place-items: center;
+  width: 36px;
+  aspect-ratio: 1 /1;
+  background-color: #cccccc;
+  color: #ffffff;
+  clip-path: circle(50%);
+}
+
+.footer-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.entry {
+  padding-bottom: var(--v-space);
+  background-color: #ffffff;
+}
+
+.entry-img img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+  margin-bottom: calc(var(--v-space) * 2 / 3);
+}
+
+.entry-img {
+  margin: 0;
+}
+
+.entry .w-container {
+  max-width: 720px;
+}
+
+.entry .heading-decoration {
+  font-size: clamp(30px, 6.25vw, 48px);
+}
+
+.entry-container {
+  font-size: clamp(16px, 2.4vw, 18px);
+}
+
+.plans {
+  padding: var(--v-space);
+  background-color: #e9e5e9;
+}
+
+.plans-container {
+  display: grid;
+  gap: 27px;
+}
+
+.plan {
+  padding: 60px 27px;
+  border-radius: 20px;
+  background-color: #ffffff;
+}
+
+.plan h3 {
+  margin-bottom: 38px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 38px;
+  font-weight: 400;
+}
+
+.plan .desc {
+  margin-bottom: 38px;
+}
+
+.plan .price {
+  margin-bottom: 22px;
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.plan .btn {
+  width: auto;
+}
+
+.btn-accent {
+  background-color: #b72661;
+}
+
+@media (min-width: 768px) {
+  .plans-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .posts-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .post img {
+    aspect-ratio: 3 / 2;
+    object-fit: cover;
+    width: 100%;
+  }
+
+  .imgtext-container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .imgtext-container.reverse {
+    flex-direction: row-reverse;
+  }
+
+  .imgtext-container > .text {
+    flex: 1;
+    min-width: 17em;
+  }
+
+  .imgtext-container > .img {
+    flex: 2;
+  }
+
+  .footer-container {
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+  }
+
+  .footer-container > *:not(.footer-sns) {
+    justify-self: start;
+  }
+
+  .footer-container > .footer-sns {
+    grid-column: 2;
+    grid-row: 1 / 4;
+    justify-self: end;
+    align-self: center;
+  }
+
+  .footer-container > .footer-site {
+    margin-bottom: 20px;
+  }
+}
+
+  .navbtn {
+    display: none;
+  }
+
+  .nav ul {
+    display: flex;
+    gap: 40px;
+    color: #707070;
+  }
+
+@media (max-width: 767px) {
+  .nav {
+    position: fixed;
+    inset: 0;
+    z-index: 100;
+    background-color: #4e483ae6;
+  }
+
+  .nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 40px;
+    color: #ffffff;
+  }
 }
